Update chat-support button

--- a/index.html
+++ b/index.html
@@ -209,12 +209,9 @@
       <button type="submit">Send Message</button>
     </form>
 
-    <div class="contact-buttons">
-      <button>ðŸ’¬ Chat Us (WhatsApp)</button>
-      <button>ðŸ’» Live Chat</button>
-      <button>ðŸ“ž Support Center</button>
-    </div>
-  </section>
+    <button>💬 Chat Us (WhatsApp)</button>
+<button>💻 Live Chat</button>
+<button>📞 Support Center</button>
 
   <!-- Footer -->
   <footer>
