--- a/index.html
+++ b/index.html
@@ -10,21 +10,22 @@
 <body>
 
   <!-- Header -->
-  <header>
-    <img src="logo.png" alt="Asstech Logo" class="logo" />
-    <button class="hamburger" id="hamburger">&#9776;</button>
-    <nav id="nav-menu" class="hidden">
-      <a href="#home">Home</a>
-      <a href="#about">About</a>
-      <a href="#services">Services</a>
-      <a href="#products">Products</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#portfolio">Portfolio</a>
-      <a href="#team">Team</a>
-      <a href="#resources">Resources</a>
-      <a href="#contact">Contacts</a>
-    </nav>
-  </header>
+<header>
+  <img src="logo.png" alt="Asstech Logo" class="logo" />
+  <button class="hamburger" id="hamburger" aria-label="Toggle navigation">&#9776;</button>
+  
+  <nav id="nav-menu" class="nav-links">
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#services">Services</a>
+    <a href="#products">Products</a>
+    <a href="#gallery">Gallery</a>
+    <a href="#portfolio">Portfolio</a>
+    <a href="#team">Team</a>
+    <a href="#resources">Resources</a>
+    <a href="#contact">Contacts</a>
+  </nav>
+</header>
 
   <!-- Banner -->
   <section id="home" class="banner">
