--- a/index.html
+++ b/index.html
@@ -10,22 +10,21 @@
 <body>
 
   <!-- Header -->
-<header>
-  <img src="logo.png" alt="Asstech Logo" class="logo" />
-  <button class="hamburger" id="hamburger" aria-label="Toggle navigation">&#9776;</button>
-  
-  <nav id="nav-menu" class="nav-links">
-    <a href="#home">Home</a>
-    <a href="#about">About</a>
-    <a href="#services">Services</a>
-    <a href="#products">Products</a>
-    <a href="#gallery">Gallery</a>
-    <a href="#portfolio">Portfolio</a>
-    <a href="#team">Team</a>
-    <a href="#resources">Resources</a>
-    <a href="#contact">Contacts</a>
-  </nav>
-</header>
+  <header>
+    <img src="logo.png" alt="Asstech Logo" class="logo" />
+    <button class="hamburger" id="hamburger">&#9776;</button>
+    <nav id="nav-menu" class="hidden">
+      <a href="#home">Home</a>
+      <a href="#about">About</a>
+      <a href="#services">Services</a>
+      <a href="#products">Products</a>
+      <a href="#gallery">Gallery</a>
+      <a href="#portfolio">Portfolio</a>
+      <a href="#team">Team</a>
+      <a href="#resources">Resources</a>
+      <a href="#contact">Contacts</a>
+    </nav>
+  </header>
 
   <!-- Banner -->
   <section id="home" class="banner">
@@ -136,9 +135,9 @@
     <p>
       At Asstech Global Synergy Ltd, we are driven by a passion to deliver sustainable, cutting-edge solutions that empower both homes and businesses.
       From humble beginnings to our current growth, our commitment has always been to quality, reliability, and client satisfaction.
-      Thank you for trusting us, we don’t take your confidence for granted.
+      Thank you for trusting us, we donï¿½t take your confidence for granted.
     </p>
-    <p><strong>– Engr. Segun Adekunle</strong></p>
+    <p><strong>ï¿½ Engr. Segun Adekunle</strong></p>
   </div>
 </section>
 
@@ -177,7 +176,7 @@
 
   <div class="contact-item">
     <img src="location-icon.png" alt="Location" class="contact-icon" />
-    <p>7 Seyi Adewale Ln, off Pedro Avenue, Gbogije, Lagos</p>
+    <p>14 Asstech Street, Lagos</p>
   </div>
 
   <div class="contact-item">
@@ -200,7 +199,7 @@
 
   <div class="contact-item">
     <img src="time-icon.png" alt="Business Hours" class="contact-icon" />
-    <p>Mon–Fri: 24hrs | Sat: 8am–11pm | Sun: Closed</p>
+    <p>Monï¿½Fri: 24hrs | Sat: 8amï¿½11pm | Sun: Closed</p>
   </div>
 
     <form action="https://formspree.io/f/xzzvjknr" method="POST">
@@ -210,9 +209,12 @@
       <button type="submit">Send Message</button>
     </form>
 
-    <button>💬 Chat Us (WhatsApp)</button>
-<button>💻 Live Chat</button>
-<button>📞 Support Center</button>
+    <div class="contact-buttons">
+      <button>ðŸ’¬ Chat Us (WhatsApp)</button>
+      <button>ðŸ’» Live Chat</button>
+      <button>ðŸ“ž Support Center</button>
+    </div>
+  </section>
 
   <!-- Footer -->
   <footer>
@@ -232,5 +234,4 @@
 </a>
 
 </body>
-
 </html>
