--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       From humble beginnings to our current growth, our commitment has always been to quality, reliability, and client satisfaction.
       Thank you for trusting us, we donï¿½t take your confidence for granted.
     </p>
-    <p><strong>ï¿½ Engr. Segun Adekunle</strong></p>
+    <p><strong>Engr. Segun Adekunle</strong></p>
   </div>
 </section>
 
