--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 
   <div class="contact-item">
     <img src="time-icon.png" alt="Business Hours" class="contact-icon" />
-    <p>Monï¿½Fri: 24hrs | Sat: 8amï¿½11pm | Sun: Closed</p>
+    <p>Mon-Fri: 24hrs | Sat: 8am-11pm | Sun: Closed</p>
   </div>
 
     <form action="https://formspree.io/f/xzzvjknr" method="POST">
@@ -210,9 +210,9 @@
     </form>
 
     <div class="contact-buttons">
-      <button>ðŸ’¬ Chat Us (WhatsApp)</button>
-      <button>ðŸ’» Live Chat</button>
-      <button>ðŸ“ž Support Center</button>
+      <button>Chat Us (WhatsApp)</button>
+      <button>Live Chat</button>
+      <button>Support Center</button>
     </div>
   </section>
 
