--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <a href="#gallery">Gallery</a>
       <a href="#portfolio">Portfolio</a>
       <a href="#team">Team</a>
+      <a href="#resources">Resources</a>
       <a href="#contact">Contacts</a>
     </nav>
   </header>
@@ -136,7 +137,7 @@
     <div class="director-message">
       <h2>Managing Director</h2>
       <h4>A Word from the Managing Director</h4>
-      <p>At Asstech Global Synergy Ltd, we are driven by a passion to deliver sustainable, cutting-edge solutions that empower both homes and businesses. From humble beginnings to our current growth, our commitment has always been to quality, reliability, and client satisfaction. Thank you for trusting us; we don't take your confidence for granted.</p>
+      <p>At Asstech Global Synergy Ltd, we are driven by a passion to deliver sustainable, cutting-edge solutions that empower both homes and businesses. From humble beginnings to our current growth, our commitment has always been to quality, reliability, and client satisfaction. Thank you for trusting us; we don’t take your confidence for granted.</p>
       <p><strong>— Engr. Segun Adekunle</strong></p>
     </div>
   </section>
@@ -168,8 +169,8 @@
     </div>
   </section>
 
-  <!-- Contact / Footer -->
-  <footer id="contact">
+  <!-- Footer -->
+  <footer>
     <p>Contact: asstechgsltd@gmail.com | 08035858679 | 08059894055</p>
     <p>Follow us: 
       <a href="#">Instagram</a> | 
