--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
       <a href="#gallery">Gallery</a>
       <a href="#portfolio">Portfolio</a>
       <a href="#team">Team</a>
-      <a href="#resources">Resources</a>
       <a href="#contact">Contacts</a>
     </nav>
   </header>
@@ -35,14 +34,14 @@
   <!-- About -->
   <section id="about">
     <h2>About Us</h2>
-    <p>We are a technological firm delivering reliable, affordable and sustainable technological services. Incorporated in 2022 by CAC...</p>
+    <p>We are a technological firm delivering reliable, affordable and sustainable technological services. Incorporated in 2022 by CAC, we have been providing solutions ranging from renewable energy installation to ICT services.</p>
+    <p>Our commitment has always been to quality, reliability, and client satisfaction. We strive to empower homes and businesses through cutting-edge technology.</p>
   </section>
 
   <!-- Services -->
   <section id="services">
     <h2>Our Services</h2>
     <div class="icon-boxes">
-      <!-- Icons for each service -->
       <div class="box">Solar Installation</div>
       <div class="box">Electrical Services</div>
       <div class="box">Home Automation</div>
@@ -63,144 +62,144 @@
   <section id="gallery">
     <h2>Gallery</h2>
     <div class="gallery-scroll">
-      <img src="gallery1.jpg" />
-      <img src="gallery2.jpg" />
-      <img src="gallery3.jpg" />
-      <img src="gallery4.jpg" />
-      <img src="gallery5.jpg" />
-      <img src="gallery6.jpg" />
-      <img src="gallery7.jpg" />
-      <img src="gallery8.jpg" />
-      <img src="gallery9.jpg" />
+      <img src="gallery1.jpg" alt="Gallery Image 1" />
+      <img src="gallery2.jpg" alt="Gallery Image 2" />
+      <img src="gallery3.jpg" alt="Gallery Image 3" />
+      <img src="gallery4.jpg" alt="Gallery Image 4" />
+      <img src="gallery5.jpg" alt="Gallery Image 5" />
+      <img src="gallery6.jpg" alt="Gallery Image 6" />
+      <img src="gallery7.jpg" alt="Gallery Image 7" />
+      <img src="gallery8.jpg" alt="Gallery Image 8" />
+      <img src="gallery9.jpg" alt="Gallery Image 9" />
     </div>
   </section>
 
   <!-- Portfolio -->
   <section id="portfolio">
     <h2>Portfolio</h2>
-    <p>Recent projects and achievements will appear here.</p>
+    <p>Recent projects and achievements</p>
+
+    <div class="video-wrapper">
+      <div class="video-container">
+        <video id="video1" class="portfolio-video">
+          <source src="video1.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <div class="custom-play" data-video="video1">
+          <img src="play-icon.png" alt="Play">
+        </div>
+      </div>
+      <p class="video-title">Solar Installation</p>
+    </div>
+
+    <div class="video-wrapper">
+      <div class="video-container">
+        <video id="video2" class="portfolio-video">
+          <source src="video2.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <div class="custom-play" data-video="video2">
+          <img src="play-icon.png" alt="Play">
+        </div>
+      </div>
+      <p class="video-title">Electrical Installation</p>
+    </div>
+
+    <div class="video-wrapper">
+      <div class="video-container">
+        <video id="video3" class="portfolio-video">
+          <source src="video3.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+        </video>
+        <div class="custom-play" data-video="video3">
+          <img src="play-icon.png" alt="Play">
+        </div>
+      </div>
+      <p class="video-title">Home Automation</p>
+    </div>
   </section>
 
-<div class="video-wrapper">
-  <div class="video-container">
-    <video id="video1" class="portfolio-video">
-      <source src="video1.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-    <div class="custom-play" data-video="video1">
-      <img src="play-icon.png" alt="Play">
+  <!-- Managing Director Section -->
+  <section id="managing-director" class="boxed-section">
+    <h2>Managing Director</h2>
+    <div class="team-member framed-profile">
+      <img src="director.jpg" alt="Engr. Segun Adekunle">
+      <h3>Engr. Segun Adekunle</h3>
+      <p>Managing Director</p>
     </div>
-  </div>
-  <p class="video-title">Solar Installation</p>
-</div>
-
-<div class="video-wrapper">
-  <div class="video-container">
-    <video id="video2" class="portfolio-video">
-      <source src="video2.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-    <div class="custom-play" data-video="video2">
-      <img src="play-icon.png" alt="Play">
+    
+    <!-- Personal Message Block -->
+    <div class="director-message">
+      <h4>A Word from the Managing Director</h4>
+      <p>
+        At Asstech Global Synergy Ltd, we are driven by a passion to deliver sustainable, cutting-edge solutions that empower both homes and businesses.
+        From humble beginnings to our current growth, our commitment has always been to quality, reliability, and client satisfaction.
+        Thank you for trusting us; we don't take your confidence for granted.
+      </p>
+      <p><strong>— Engr. Segun Adekunle</strong></p>
     </div>
-  </div>
-  <p class="video-title">Electrical Installation</p>
-</div>
-
-<div class="video-wrapper">
-  <div class="video-container">
-    <video id="video3" class="portfolio-video">
-      <source src="video3.mp4" type="video/mp4">
-      Your browser does not support the video tag.
-    </video>
-    <div class="custom-play" data-video="video3">
-      <img src="play-icon.png" alt="Play">
-    </div>
-  </div>
-  <p class="video-title">Home Automation</p>
-</div>
-
-<!-- Managing Director Section -->
-<section id="managing-director" class="boxed-section">
-  <h2>Managing Director</h2>
-  <div class="team-member framed-profile">
-    <img src="director.jpg" alt="Engr. Segun Adekunle">
-    <h3>Engr. Segun Adekunle</h3>
-    <p>Managing Director</p>
-  </div>
-  
-  <!-- Personal Message Block -->
-  <div class="director-message">
-    <h4>A Word from the Managing Director</h4>
-    <p>
-      At Asstech Global Synergy Ltd, we are driven by a passion to deliver sustainable, cutting-edge solutions that empower both homes and businesses.
-      From humble beginnings to our current growth, our commitment has always been to quality, reliability, and client satisfaction.
-      Thank you for trusting us, we donï¿½t take your confidence for granted.
-    </p>
-    <p><strong>-Engr. Segun Adekunle</strong></p>
-  </div>
-</section>
+  </section>
 
   <!-- Team -->
-<section id="team" class="boxed-section">
-  <h2>Our Team</h2>
-  <div class="team">
+  <section id="team" class="boxed-section">
+    <h2>Our Team</h2>
+    <div class="team">
 
-    <div class="team-member framed-profile">
-      <img src="emeka.jpg" alt="Engr. Emeka Okafor" />
-      <h3>Engr. Emeka Okafor</h3>
-      <p>Technical Operations Lead</p>
-      <small>Oversees project execution, technical troubleshooting, and quality control.</small>
+      <div class="team-member framed-profile">
+        <img src="emeka.jpg" alt="Engr. Emeka Okafor" />
+        <h3>Engr. Emeka Okafor</h3>
+        <p>Technical Operations Lead</p>
+        <small>Oversees project execution, technical troubleshooting, and quality control.</small>
+      </div>
+
+      <div class="team-member framed-profile">
+        <img src="ibrahim.jpg" alt="Mr. Ibrahim Musa" />
+        <h3>Mr. Ibrahim Musa</h3>
+        <p>Head of Installation & Maintenance</p>
+        <small>Supervises installations and ensures equipment functionality.</small>
+      </div>
+
+      <div class="team-member framed-profile">
+        <img src="yetunde.jpg" alt="Ms. Yetunde Adebayo" />
+        <h3>Ms. Yetunde Adebayo</h3>
+        <p>Customer Support & Project Coordinator</p>
+        <small>Handles client communication and project scheduling.</small>
+      </div>
+
     </div>
-
-    <div class="team-member framed-profile">
-      <img src="ibrahim.jpg" alt="Mr. Ibrahim Musa" />
-      <h3>Mr. Ibrahim Musa</h3>
-      <p>Head of Installation & Maintenance</p>
-      <small>Supervises installations and ensures equipment functionality.</small>
-    </div>
-
-    <div class="team-member framed-profile">
-      <img src="yetunde.jpg" alt="Ms. Yetunde Adebayo" />
-      <h3>Ms. Yetunde Adebayo</h3>
-      <p>Customer Support & Project Coordinator</p>
-      <small>Handles client communication and project scheduling.</small>
-    </div>
-
-  </div>
-</section>
+  </section>
 
   <!-- Contact -->
-  <section id="contact" style="padding: 40px 20px; background: #fff;">
-  <h2 style="text-align: center;">Contact Us</h2>
+  <section id="contact">
+    <h2>Contact Us</h2>
 
-  <div class="contact-item">
-    <img src="location-icon.png" alt="Location" class="contact-icon" />
-    <p>14 Asstech Street, Lagos</p>
-  </div>
+    <div class="contact-item">
+      <img src="location-icon.png" alt="Location" class="contact-icon" />
+      <p>14 Asstech Street, Lagos</p>
+    </div>
 
-  <div class="contact-item">
-    <a href="tel:08035858679">
-      <img src="call-icon.png" alt="Call Us" class="contact-icon" />
-    </a>
-    <p>
-      CALL US: 
-      <a href="tel:08035858679">08035858679</a>, 
-      <a href="tel:08059894055">08059894055</a>
-    </p>
-  </div>
+    <div class="contact-item">
+      <a href="tel:08035858679">
+        <img src="call-icon.png" alt="Call Us" class="contact-icon" />
+      </a>
+      <p>
+        CALL US: 
+        <a href="tel:08035858679">08035858679</a>, 
+        <a href="tel:08059894055">08059894055</a>
+      </p>
+    </div>
 
-  <div class="contact-item">
-    <a href="mailto:asstechgsltd@gmail.com">
-      <img src="email-icon.png" alt="Email Us" class="contact-icon" />
-    </a>
-    <p>EMAIL US: <a href="mailto:asstechgsltd@gmail.com">asstechgsltd@gmail.com</a></p>
-  </div>
+    <div class="contact-item">
+      <a href="mailto:asstechgsltd@gmail.com">
+        <img src="email-icon.png" alt="Email Us" class="contact-icon" />
+      </a>
+      <p>EMAIL US: <a href="mailto:asstechgsltd@gmail.com">asstechgsltd@gmail.com</a></p>
+    </div>
 
-  <div class="contact-item">
-    <img src="time-icon.png" alt="Business Hours" class="contact-icon" />
-    <p>Mon-Fri: 24hrs | Sat: 8am-11pm | Sun: Closed</p>
-  </div>
+    <div class="contact-item">
+      <img src="time-icon.png" alt="Business Hours" class="contact-icon" />
+      <p>Mon-Fri: 24hrs | Sat: 8am-11pm | Sun: Closed</p>
+    </div>
 
     <form action="https://formspree.io/f/xzzvjknr" method="POST">
       <input type="text" name="name" placeholder="Your Name" required />
@@ -210,7 +209,7 @@
     </form>
 
     <div class="contact-buttons">
-      <button>Chat Us (WhatsApp)</button>
+      <button id="whatsapp-btn">Chat Us (WhatsApp)</button>
       <button>Live Chat</button>
       <button>Support Center</button>
     </div>
@@ -227,11 +226,11 @@
     <p>&copy; 2025 Asstech Global Synergy Ltd. All rights reserved.</p>
   </footer>
 
-<!-- WhatsApp Chat Us Button -->
-<a href="https://wa.me/2348035858679?text=Hello%20Asstech%20Global%20Synergy%20Ltd%2C%20I%27d%20like%20to%20make%20an%20enquiry." 
-   class="whatsapp-float" target="_blank" title="Chat Us on WhatsApp">
-  <img src="whatsapp.png" alt="Chat Us on WhatsApp">
-</a>
+  <!-- WhatsApp Float Button -->
+  <a href="https://wa.me/2348035858679?text=Hello%20Asstech%20Global%20Synergy%20Ltd%2C%20I%27d%20like%20to%20make%20an%20enquiry." 
+     class="whatsapp-float" target="_blank" title="Chat Us on WhatsApp">
+    <img src="whatsapp.png" alt="Chat Us on WhatsApp">
+  </a>
 
 </body>
 </html>
